fix community item button getting cut off

--- a/src/app/components/community/slider/item/item.styl
+++ b/src/app/components/community/slider/item/item.styl
@@ -2,10 +2,6 @@
 @require '~styles-lib/mixins'
 @require '../common'
 
-.-item
-	&:first-child
-		margin-left: 2px
-
 .-bubble
 	img-circle()
 	padding: 2px
