--- a/src/app/components/community/slider/placeholder/placeholder.styl
+++ b/src/app/components/community/slider/placeholder/placeholder.styl
@@ -5,9 +5,8 @@
 
 .-container
 	display: inline-block
-
-	&:first-child
-		margin-left: 2px
+	position: relative
+	top: 2px
 
 	.-item
 		img-circle()
