--- a/src/app/components/community/slider/slider.styl
+++ b/src/app/components/community/slider/slider.styl
@@ -3,6 +3,7 @@
 
 .-scroller
 	padding-bottom: 6px
+	padding-left: 2px
 
 .-list
 	full-bleed()
